# rust-os-experiment-2

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  build-rust-os-gdb.sh  debug.sh  rustos.sublime-project
lib/unimplemented_functions/: Cargo.toml
lib/unimplemented_functions/src/: lib.rs
rust-libs/alloc/: Cargo.toml
rust-libs/core/: Cargo.toml  src
rust-libs/rand/: src
rust-libs/rustc_unicode/: Cargo.toml
rust-libs/std/: src
src/: lib.rs
src/arch/x86_64/: interrupt_handlers.asm  linker.ld
src/arch/x86_64/allocator/: Cargo.toml
src/arch/x86_64/allocator/src/: lib.rs
src/arch/x86_64/bootstrap/: boot.asm  long_mode_init.asm  setup_paging.asm
src/grub/: grub.cfg
src/main/: Cargo.toml
src/main/src/: lib.rs  unimplemented_functions.rs
src/os/: Cargo.toml
src/os/src/: global.rs  interrupts.rs  lib.rs  task.rs
src/os/src/allocator/: frame_stack.rs  mod.rs  paging.rs
src/os/src/init/: mod.rs  multiboot.rs
src/os/src/io/: keyboard.rs  mod.rs  ps2.rs
src/os/src/io/arch/x86_64/: mod.rs
src/os/src/io/keyboard/: mod.rs  qwerty.rs  qwertz.rs  scancode.rs
src/os/src/io/pci/: mod.rs  rtl8139.rs
src/os/src/io/stdio/: mod.rs  vga_buffer.rs
src/os/src/net/: ethernet.rs
src/os/src/stream/: basic.rs  mod.rs  mpsc.rs  mpsc_old.rs  spsc.rs  spsc_old.rs
src/os/src/thread/: mod.rs
src/rust-libs/alloc/: Cargo.toml
src/rust-libs/collections/: Cargo.toml
src/rust-libs/rand/: Cargo.toml
src/rust-libs/rustc_unicode/: src
src/rust-libs/std/: Cargo.toml
