[package]
name = "alloc"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[features]
default = []
external_funcs = []
external_crate = ["external"]

[target.x86_64-unknown-linux-gnu.dependencies.external]
path = "../../src/arch/x86_64/allocator"
optional = true

[dependencies.core]
path = "../core"